// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: default 1`] = `
{
  "config": {
    "description": "Standard improve pass — all sub-processes + sustaining proactive lane.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": true,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "default",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: quick 1`] = `
{
  "config": {
    "description": "Reflect-only pass — no extract, distill, consolidate, memoryInference, or graphExtraction.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "quick",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: thorough 1`] = `
{
  "config": {
    "description": "Like default, plus the triage process (drains the pending-proposal backlog).",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": true,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": true,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "thorough",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: memory-focus 1`] = `
{
  "config": {
    "description": "Memory and lesson improvement only — no distill, consolidate, or graphExtraction.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": true,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "memory",
          "lesson",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "memory-focus",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: graph-refresh 1`] = `
{
  "config": {
    "description": "Full-corpus graph extraction pass — rebuilds graph relationships across all stash files. Disables all other sub-processes. Use via \`akm improve --profile graph-refresh\` or the embedded \`graph-refresh-weekly\` task.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
        "fullScan": true,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "graph-refresh",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: frequent 1`] = `
{
  "config": {
    "description": "Frequent extract + inference pass — sessions, memory inference, graph, reflect.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": true,
        "minNewSessions": 3,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "frequent",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: consolidate 1`] = `
{
  "config": {
    "description": "Consolidation-only pass — merges, deduplicates, and prunes memories every 4h.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "maxChunkSize": 25,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "consolidate",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: catchup 1`] = `
{
  "config": {
    "description": "Manual catch-up — consolidation + triage drain with no interval minimum.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "maxChunkSize": 50,
        "minPoolSize": 0,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": true,
        "maxAcceptsPerRun": 100,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "catchup",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: synthesize 1`] = `
{
  "config": {
    "description": "Synthesis-only — cross-episodic recombination (#609). Opt-in periodic pass; all generative/extract passes off. (Procedural compilation (#615) is held OFF until cross-project scoping lands — it over-fits one-off sequences, 0% accept.)",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": true,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "synthesize",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: reflect-distill 1`] = `
{
  "config": {
    "description": "Reflect + distill sustaining pass — reflect, distill, memoryInference, proposal triage (promote), and the proactive-maintenance lane; consolidate/graphExtraction/extract off. Sync disabled: an interrupted run would otherwise leave an uncommitted backlog.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "minNewSessions": 1,
        "timeoutMs": 300000,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {},
        "maxAcceptsPerRun": 15,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": false,
      "push": true,
    },
  },
  "name": "reflect-distill",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: proactive-maintenance 1`] = `
{
  "config": {
    "description": "Proactive-maintenance pass — reflect, distill, proposal triage (promote, high budget), and the proactive-maintenance lane (maxPerRun 100); consolidate/memoryInference/graphExtraction/extract off. Sync disabled: an interrupted run would otherwise leave an uncommitted backlog.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 100,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": false,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {},
        "maxAcceptsPerRun": 100,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": false,
      "push": true,
    },
  },
  "name": "proactive-maintenance",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: recombine-only 1`] = `
{
  "config": {
    "description": "Recombine-only pass — cross-episodic recombination (#609) over graph entities, excluding session/checkpoint telemetry; all generative/extract/triage passes off.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 15,
      },
      "procedural": {
        "enabled": false,
      },
      "recombine": {
        "enabled": true,
        "excludeTags": [
          "session",
          "claude",
          "opencode",
          "ses",
        ],
        "maxClusterSize": 12,
        "maxClustersPerRun": 5,
        "minClusterSize": 3,
        "relatednessSource": "both",
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "wiki",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "message": "akm recombine: {accepted} accepted, {refs} refs @ {timestamp}",
      "push": true,
    },
  },
  "name": "recombine-only",
}
`;
